--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/project 5/style.css">
+    <title>loader</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="loader"></div>
+    <main class="conatiner">
+        <div class="box">
+            <div id="block"></div>
+            <br>
+            <div id="block2"></div>
+            <br>
+            <div id="block3"></div>
+        </div>
+    </main>
 </body>
 </html>
